--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -29,7 +29,7 @@
                     <div class="bttn-wrap">
                         <a class="button button-light edit-btn" href="/settings">
                             <span><img src="/edit.png" alt=""/></span>
-                            Edit Profile
+                            <span class="edit-text">Edit Profile</span>
                         </a>
                     </div>
                    
