--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -278,6 +278,7 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
 .user-profile{background-color:#f9f9f9;float: left;width: 100%}
 .edit-btn{height: 37px;line-height: 30px;min-height:auto;margin:0 auto;float:none;display: inline-block;border-radius:40px;color:#e23814!important;font-size:16px;text-transform:uppercase;padding-top:4px}
 .edit-btn span{margin-right: 15px;vertical-align: middle;}
+.edit-btn .edit-text{vertical-align: top;margin:5px 0 0 ;}
 .validation-invalid {
     color: #3a0900;
     font-size: 14px;
@@ -438,7 +439,7 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
 .reviews-final .rate-box{text-align: left;} 
 .fbicon{max-width:100%; height:18px;width:10px;vertical-align: middle;margin-right:10px;margin-top: -5px}
 .reviews-final .checkbox-icon{margin-top:-2px;}
-.logo-ig img{width: auto;max-width: auto;margin-top: 2px}
+.logo-ig img{height: 100%;width: 99px;margin-top: 2px}
 
 /*---------media-------*/
 @media not all, (-webkit-min-device-pixel-ratio: 1.5), not all, (min-resolution: 144dpi), (min-resolution: 1.5dppx){
