--- a/client/templates/register.html
+++ b/client/templates/register.html
@@ -34,6 +34,12 @@
               </label>
               <label class="item-input item-floating-label">
                 <span class="icon-wrap">
+                  <span class="icon-top"><img src="./user.png" alt="" /></span>
+                  <input name="username" ng-model="data.username" type="text" placeholder="USERNAME" validator="required, usernameValidate">
+                </span>
+              </label>
+              <label class="item-input item-floating-label">
+                <span class="icon-wrap">
                   <span class="icon-top"><img src="./mail.png" alt="" /></span>
                   <input name="email" ng-model="data.email" type="text" placeholder="EMAIL">
                 </span>
