--- a/client/templates/feed.html
+++ b/client/templates/feed.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Feed" title="{{ feedDate }}">
+<ion-view view-title="Feed">
     <ion-header-bar align-title="left" class="bar-positive">
         <div class="bar bar-header bar-light head_bar">
              <div class="back_arrrow">
